--- a/client/src/style.css
+++ b/client/src/style.css
@@ -11,7 +11,22 @@
 h1 {
   @apply font-medium text-2xl;
 }
+
 .error {
   @apply text-red-500;
 }
+
+.success {
+  @apply text-green-500;
+}
+
+.success.checked::before {
+  content: '✓';
+}
+
+.error.checked::before {
+  content: '✗';
+}
+
+
 
